--- a/napster/package.json
+++ b/napster/package.json
@@ -31,6 +31,7 @@
 		"volumio": ">=3.512.0 <4.0.0"
 	},
 	"dependencies": {
+		"axios": "^1.4.0",
 		"fs-extra": "^0.28.0",
 		"kew": "^0.7.0",
 		"v-conf": "^1.4.0"
